force-app/main/default/objects/Study_Daily_Report__c/Study_Daily_Report__c.object-meta.xml
<CustomObject>
    <label>Study Daily Report</label>
    <nameField>
        <label>Study Daily Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Daily Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>