force-app/main/default/objects/Study_Daily_Report__c/fields/Active_Sites__c.field-meta.xml
<CustomField>
    <fullName>Active_Sites__c</fullName>
    <label>Active Sites</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>