force-app/main/default/objects/Study_Daily_Report__c/fields/Biostatistician__c.field-meta.xml
<CustomField>
    <fullName>Biostatistician__c</fullName>
    <label>Biostatistician</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>_Biostatistician (GEN)</fullName>
            </value>
            <value>
                <fullName>Alpana Waldron-External</fullName>
            </value>
            <value>
                <fullName>Andrew Magyar</fullName>
            </value>
            <value>
                <fullName>Arvind Tripathi-External</fullName>
            </value>
            <value>
                <fullName>Bin Yao</fullName>
            </value>
            <value>
                <fullName>Bo Gao</fullName>
            </value>
            <value>
                <fullName>Bradley Dain-External</fullName>
            </value>
            <value>
                <fullName>Divya Singh - External</fullName>
            </value>
            <value>
                <fullName>Furong Sun</fullName>
            </value>
            <value>
                <fullName>Haitao Gao</fullName>
            </value>
            <value>
                <fullName>Haixin Zhang</fullName>
            </value>
            <value>
                <fullName>Jenni Mou</fullName>
            </value>
            <value>
                <fullName>Jessica Cai</fullName>
            </value>
            <value>
                <fullName>Jian Zhao</fullName>
            </value>
            <value>
                <fullName>Jingjin Li</fullName>
            </value>
            <value>
                <fullName>Jingning Mei</fullName>
            </value>
            <value>
                <fullName>Jing Xiao</fullName>
            </value>
            <value>
                <fullName>Kathryn Miller</fullName>
            </value>
            <value>
                <fullName>Kimmi-Yiziying Chen-External</fullName>
            </value>
            <value>
                <fullName>Kuo-Chen Chan</fullName>
            </value>
            <value>
                <fullName>Kusha Mohammadi</fullName>
            </value>
            <value>
                <fullName>Linzhi Xu</fullName>
            </value>
            <value>
                <fullName>Michelle DeVeaux</fullName>
            </value>
            <value>
                <fullName>Neena Sarkar</fullName>
            </value>
            <value>
                <fullName>Nilsen Miller</fullName>
            </value>
            <value>
                <fullName>Peijie Hou</fullName>
            </value>
            <value>
                <fullName>Peisi Kan - External</fullName>
            </value>
            <value>
                <fullName>Pranab Mitra</fullName>
            </value>
            <value>
                <fullName>Qiong Zhao</fullName>
            </value>
            <value>
                <fullName>Rachel Jia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>