force-app/main/default/objects/Study_Daily_Report__c/fields/CD_Number_of_Planned_Sites__c.field-meta.xml
<CustomField>
    <fullName>CD_Number_of_Planned_Sites__c</fullName>
    <label>CD Number of Planned Sites</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>