force-app/main/default/objects/Study_Daily_Report__c/fields/CD_Total_Number_of_Planned_Patients__c.field-meta.xml
<CustomField>
    <fullName>CD_Total_Number_of_Planned_Patients__c</fullName>
    <label>CD Total Number of Planned Patients</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>