force-app/main/default/objects/Study_Daily_Report__c/fields/Central_Monitor__c.field-meta.xml
<CustomField>
    <fullName>Central_Monitor__c</fullName>
    <label>Central Monitor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alexander Kansky</fullName>
            </value>
            <value>
                <fullName>Anne Smith</fullName>
            </value>
            <value>
                <fullName>Christopher Chamak</fullName>
            </value>
            <value>
                <fullName>Elin Cate</fullName>
            </value>
            <value>
                <fullName>Fung-Yee To</fullName>
            </value>
            <value>
                <fullName>Jeanelle De Villiers</fullName>
            </value>
            <value>
                <fullName>Jongwhee Lee</fullName>
            </value>
            <value>
                <fullName>Mary Hasinsky</fullName>
            </value>
            <value>
                <fullName>Nicholas Ross</fullName>
            </value>
            <value>
                <fullName>Nikita Nayudu</fullName>
            </value>
            <value>
                <fullName>Violet Vincent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>