force-app/main/default/objects/Study_Daily_Report__c/fields/Clinical_Development_Stage__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Development_Stage__c</fullName>
    <label>Clinical Development Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ECD</fullName>
            </value>
            <value>
                <fullName>LCD</fullName>
            </value>
            <value>
                <fullName>Medical Affairs (MA)</fullName>
            </value>
            <value>
                <fullName>NSD</fullName>
            </value>
            <value>
                <fullName>PAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>