force-app/main/default/objects/Study_Daily_Report__c/fields/CROIn_HouseOutsource_Vendor_TBD__c.field-meta.xml
<CustomField>
    <fullName>CROIn_HouseOutsource_Vendor_TBD__c</fullName>
    <label>CRO/In House/Outsource (Vendor TBD)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ICON</fullName>
            </value>
            <value>
                <fullName>InHouse</fullName>
            </value>
            <value>
                <fullName>IQVIA</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Optum</fullName>
            </value>
            <value>
                <fullName>PPD</fullName>
            </value>
            <value>
                <fullName>PXL</fullName>
            </value>
            <value>
                <fullName>Syneos</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>