force-app/main/default/objects/Study_Daily_Report__c/fields/CSR__c.field-meta.xml
<CustomField>
    <fullName>CSR__c</fullName>
    <label>CSR</label>
    <type>Date</type>
</CustomField>