force-app/main/default/objects/Study_Daily_Report__c/fields/CTM__c.field-meta.xml
<CustomField>
    <fullName>CTM__c</fullName>
    <label>CTM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>_Clinical Study Leader (GEN)</fullName>
            </value>
            <value>
                <fullName>Adekunle Akinmola-External</fullName>
            </value>
            <value>
                <fullName>Ameet Narwal</fullName>
            </value>
            <value>
                <fullName>Angela Manley</fullName>
            </value>
            <value>
                <fullName>Anit Bajwa</fullName>
            </value>
            <value>
                <fullName>Antonella Cristofano</fullName>
            </value>
            <value>
                <fullName>Ayesha Sabir</fullName>
            </value>
            <value>
                <fullName>Benjamin Horel</fullName>
            </value>
            <value>
                <fullName>Calogera McCormick-External</fullName>
            </value>
            <value>
                <fullName>Carolyn Nienstedt</fullName>
            </value>
            <value>
                <fullName>Charlotte Fisher</fullName>
            </value>
            <value>
                <fullName>Charlotte Lyon</fullName>
            </value>
            <value>
                <fullName>Cliff Baum</fullName>
            </value>
            <value>
                <fullName>Daya Gulabani</fullName>
            </value>
            <value>
                <fullName>Deidre Williams</fullName>
            </value>
            <value>
                <fullName>Deirdre Mulhearn</fullName>
            </value>
            <value>
                <fullName>Derrick Bramble</fullName>
            </value>
            <value>
                <fullName>Deshaka Galappaththy</fullName>
            </value>
            <value>
                <fullName>Diana Horton</fullName>
            </value>
            <value>
                <fullName>Dominique Atmodjo Watkins</fullName>
            </value>
            <value>
                <fullName>Emily Nanna</fullName>
            </value>
            <value>
                <fullName>Emma Rouse</fullName>
            </value>
            <value>
                <fullName>Galyna Ganieva</fullName>
            </value>
            <value>
                <fullName>Gwen Ouellette</fullName>
            </value>
            <value>
                <fullName>Heidi Castillo</fullName>
            </value>
            <value>
                <fullName>Hiran Cooray</fullName>
            </value>
            <value>
                <fullName>Ihuoma Obaze-External</fullName>
            </value>
            <value>
                <fullName>Jeannette Green</fullName>
            </value>
            <value>
                <fullName>Jennifer Foy</fullName>
            </value>
            <value>
                <fullName>Jodie Tyler-Gale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>