force-app/main/default/objects/Study_Daily_Report__c/fields/Data_Manager__c.field-meta.xml
<CustomField>
    <fullName>Data_Manager__c</fullName>
    <label>Data Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>