force-app/main/default/objects/Study_Daily_Report__c/fields/DBL__c.field-meta.xml
<CustomField>
    <fullName>DBL__c</fullName>
    <label>DBL</label>
    <type>Date</type>
</CustomField>