force-app/main/default/objects/Study_Daily_Report__c/fields/Drug_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Drug_Candidate__c</fullName>
    <label>Drug Candidate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>