force-app/main/default/objects/Study_Daily_Report__c/fields/EDC_GoLive__c.field-meta.xml
<CustomField>
    <fullName>EDC_GoLive__c</fullName>
    <label>EDC Go-Live</label>
    <type>Date</type>
</CustomField>