force-app/main/default/objects/Study_Daily_Report__c/fields/ES__c.field-meta.xml
<CustomField>
    <fullName>ES__c</fullName>
    <label>ES</label>
    <type>Date</type>
</CustomField>