force-app/main/default/objects/Study_Daily_Report__c/fields/Estimated_Date_to_the_RGC__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Date_to_the_RGC__c</fullName>
    <label>Estimated Date to the RGC</label>
    <type>Date</type>
</CustomField>