force-app/main/default/objects/Study_Daily_Report__c/fields/Estimated_Number_of_Patients__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Number_of_Patients__c</fullName>
    <label>Estimated Number of Patients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>