force-app/main/default/objects/Study_Daily_Report__c/fields/Exploratory_Biomarker_Study_Type__c.field-meta.xml
<CustomField>
    <fullName>Exploratory_Biomarker_Study_Type__c</fullName>
    <label>Exploratory Biomarker Study Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>iPET</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>NSD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>