force-app/main/default/objects/Study_Daily_Report__c/fields/FAP__c.field-meta.xml
<CustomField>
    <fullName>FAP__c</fullName>
    <label>FAP</label>
    <type>Date</type>
</CustomField>