force-app/main/default/objects/Study_Daily_Report__c/fields/FAP_BSB__c.field-meta.xml
<CustomField>
    <fullName>FAP_BSB__c</fullName>
    <label>FAP BSB</label>
    <type>Date</type>
</CustomField>