force-app/main/default/objects/Study_Daily_Report__c/fields/FPFD__c.field-meta.xml
<CustomField>
    <fullName>FPFD__c</fullName>
    <label>FPFD</label>
    <type>Date</type>
</CustomField>