force-app/main/default/objects/Study_Daily_Report__c/fields/FPFV__c.field-meta.xml
<CustomField>
    <fullName>FPFV__c</fullName>
    <label>FPFV</label>
    <type>Date</type>
</CustomField>