force-app/main/default/objects/Study_Daily_Report__c/fields/KRM__c.field-meta.xml
<CustomField>
    <fullName>KRM__c</fullName>
    <label>KRM</label>
    <type>Date</type>
</CustomField>