force-app/main/default/objects/Study_Daily_Report__c/fields/Lead_CTL__c.field-meta.xml
<CustomField>
    <fullName>Lead_CTL__c</fullName>
    <label>Lead CTL</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Marta Zuk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>