force-app/main/default/objects/Study_Daily_Report__c/fields/LPFD__c.field-meta.xml
<CustomField>
    <fullName>LPFD__c</fullName>
    <label>LPFD</label>
    <type>Date</type>
</CustomField>