force-app/main/default/objects/Study_Daily_Report__c/fields/LPFV__c.field-meta.xml
<CustomField>
    <fullName>LPFV__c</fullName>
    <label>LPFV</label>
    <type>Date</type>
</CustomField>