force-app/main/default/objects/Study_Daily_Report__c/fields/LPLV__c.field-meta.xml
<CustomField>
    <fullName>LPLV__c</fullName>
    <label>LPLV</label>
    <type>Date</type>
</CustomField>