force-app/main/default/objects/Study_Daily_Report__c/fields/Medical_Director__c.field-meta.xml
<CustomField>
    <fullName>Medical_Director__c</fullName>
    <label>Medical Director</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>_ECD Medical Director (GEN)</fullName>
            </value>
            <value>
                <fullName>_II Medical Director (GEN)</fullName>
            </value>
            <value>
                <fullName>_ONC Medical Director (GEN)</fullName>
            </value>
            <value>
                <fullName>_TA Medical Director (GEN)</fullName>
            </value>
            <value>
                <fullName>Aaron Kithcart</fullName>
            </value>
            <value>
                <fullName>Aditya Athanikar</fullName>
            </value>
            <value>
                <fullName>Afshin Farzaneh-Far</fullName>
            </value>
            <value>
                <fullName>Allen Radin</fullName>
            </value>
            <value>
                <fullName>Alyson Berliner</fullName>
            </value>
            <value>
                <fullName>Andrea Marcus</fullName>
            </value>
            <value>
                <fullName>Andrew Korotzer</fullName>
            </value>
            <value>
                <fullName>Angeliki Giannelou</fullName>
            </value>
            <value>
                <fullName>Arsalan Shabbir</fullName>
            </value>
            <value>
                <fullName>Ashish Bansal</fullName>
            </value>
            <value>
                <fullName>Benjamin Olenchock</fullName>
            </value>
            <value>
                <fullName>Benjamin Ortiz</fullName>
            </value>
            <value>
                <fullName>Brad Shumel</fullName>
            </value>
            <value>
                <fullName>Charles Harris</fullName>
            </value>
            <value>
                <fullName>Cynthia Portal Celhay</fullName>
            </value>
            <value>
                <fullName>David Lederer</fullName>
            </value>
            <value>
                <fullName>Deepti Deshpande</fullName>
            </value>
            <value>
                <fullName>Eduardo Forleo Neto</fullName>
            </value>
            <value>
                <fullName>Elizabeth Miller</fullName>
            </value>
            <value>
                <fullName>Ethan Marin</fullName>
            </value>
            <value>
                <fullName>Flonza Isa</fullName>
            </value>
            <value>
                <fullName>Georgios Kalliolias</fullName>
            </value>
            <value>
                <fullName>Giuseppe Gullo</fullName>
            </value>
            <value>
                <fullName>Heather Magnan</fullName>
            </value>
            <value>
                <fullName>Helen Cicirello</fullName>
            </value>
            <value>
                <fullName>Jaman Maroni</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>