force-app/main/default/objects/Study_Daily_Report__c/fields/Operational_Study_Status__c.field-meta.xml
<CustomField>
    <fullName>Operational_Study_Status__c</fullName>
    <label>Operational Study Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Close-Out</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Conduct</fullName>
            </value>
            <value>
                <fullName>Endorsed Scenario</fullName>
            </value>
            <value>
                <fullName>Enrollment</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
            <value>
                <fullName>On-Hold</fullName>
            </value>
            <value>
                <fullName>Placeholder</fullName>
            </value>
            <value>
                <fullName>Pre-Planning</fullName>
            </value>
            <value>
                <fullName>Report-Out</fullName>
            </value>
            <value>
                <fullName>Scenario</fullName>
            </value>
            <value>
                <fullName>Start-Up</fullName>
            </value>
            <value>
                <fullName>TMF Lock Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>