force-app/main/default/objects/Study_Daily_Report__c/fields/PGx_Comments__c.field-meta.xml
<CustomField>
    <fullName>PGx_Comments__c</fullName>
    <label>PGx Comments</label>
    <type>TextArea</type>
</CustomField>