force-app/main/default/objects/Study_Daily_Report__c/fields/PGx_Component__c.field-meta.xml
<CustomField>
    <fullName>PGx_Component__c</fullName>
    <label>PGx Component</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>