force-app/main/default/objects/Study_Daily_Report__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phase 1</fullName>
            </value>
            <value>
                <fullName>Phase 1/2</fullName>
            </value>
            <value>
                <fullName>Phase 1/3</fullName>
            </value>
            <value>
                <fullName>Phase 1b</fullName>
            </value>
            <value>
                <fullName>Phase 1b/2a</fullName>
            </value>
            <value>
                <fullName>Phase 2</fullName>
            </value>
            <value>
                <fullName>Phase 2/3</fullName>
            </value>
            <value>
                <fullName>Phase 2a</fullName>
            </value>
            <value>
                <fullName>Phase 2b</fullName>
            </value>
            <value>
                <fullName>Phase 3</fullName>
            </value>
            <value>
                <fullName>Phase 3b</fullName>
            </value>
            <value>
                <fullName>Phase 4</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>