force-app/main/default/objects/Study_Daily_Report__c/fields/PMSL__c.field-meta.xml
<CustomField>
    <fullName>PMSL__c</fullName>
    <label>PMSL</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ana Gonzalez</fullName>
            </value>
            <value>
                <fullName>Andrea Hooper</fullName>
            </value>
            <value>
                <fullName>Annamaria Farrell</fullName>
            </value>
            <value>
                <fullName>Julie Horowitz</fullName>
            </value>
            <value>
                <fullName>Karoline Meagher</fullName>
            </value>
            <value>
                <fullName>Kerry Casey</fullName>
            </value>
            <value>
                <fullName>Lorna Farrelly</fullName>
            </value>
            <value>
                <fullName>Poulabi Banerjee</fullName>
            </value>
            <value>
                <fullName>Satyajit Karnik</fullName>
            </value>
            <value>
                <fullName>Travis Bernardo</fullName>
            </value>
            <value>
                <fullName>Xiping Cheng</fullName>
            </value>
            <value>
                <fullName>Jennifer Hamilton</fullName>
            </value>
            <value>
                <fullName>Anita Boyapati</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>