force-app/main/default/objects/Study_Daily_Report__c/fields/Primary_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Primary_Endpoint__c</fullName>
    <label>Primary Endpoint</label>
    <type>Date</type>
</CustomField>