force-app/main/default/objects/Study_Daily_Report__c/fields/Program_Operations_Lead__c.field-meta.xml
<CustomField>
    <fullName>Program_Operations_Lead__c</fullName>
    <label>Program Operations Lead</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>_Program Operations Leader (GEN)</fullName>
            </value>
            <value>
                <fullName>Alison Brown</fullName>
            </value>
            <value>
                <fullName>Allison Mulcahy</fullName>
            </value>
            <value>
                <fullName>Anit Bajwa</fullName>
            </value>
            <value>
                <fullName>Anna Labrosciano</fullName>
            </value>
            <value>
                <fullName>Charlotte Lyon</fullName>
            </value>
            <value>
                <fullName>Christina Perry</fullName>
            </value>
            <value>
                <fullName>Christopher Powell</fullName>
            </value>
            <value>
                <fullName>David Parker</fullName>
            </value>
            <value>
                <fullName>Daya Gulabani</fullName>
            </value>
            <value>
                <fullName>Dominique Duchesne</fullName>
            </value>
            <value>
                <fullName>Grainne Power</fullName>
            </value>
            <value>
                <fullName>Ingeborg Heirman</fullName>
            </value>
            <value>
                <fullName>Jaclyn Patterson</fullName>
            </value>
            <value>
                <fullName>Jeannie Yo</fullName>
            </value>
            <value>
                <fullName>Katharine Nunnink</fullName>
            </value>
            <value>
                <fullName>Keri Aitchison</fullName>
            </value>
            <value>
                <fullName>Kristy Macci</fullName>
            </value>
            <value>
                <fullName>Maria Rubino</fullName>
            </value>
            <value>
                <fullName>Maria Rubino Cornhill</fullName>
            </value>
            <value>
                <fullName>Michelle Wong</fullName>
            </value>
            <value>
                <fullName>Moetaz Albizem</fullName>
            </value>
            <value>
                <fullName>Nazmul Haque</fullName>
            </value>
            <value>
                <fullName>Ngan Trinh</fullName>
            </value>
            <value>
                <fullName>Ori Yellin</fullName>
            </value>
            <value>
                <fullName>Paula Harding</fullName>
            </value>
            <value>
                <fullName>Paul Curtis</fullName>
            </value>
            <value>
                <fullName>Shaun Langdon</fullName>
            </value>
            <value>
                <fullName>Siobhan Nolan</fullName>
            </value>
            <value>
                <fullName>Susie Dorricott</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>