force-app/main/default/objects/Study_Daily_Report__c/fields/QML__c.field-meta.xml
<CustomField>
    <fullName>QML__c</fullName>
    <label>QML</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amanda Rozner</fullName>
            </value>
            <value>
                <fullName>Gail Boyer</fullName>
            </value>
            <value>
                <fullName>Joel Wolf</fullName>
            </value>
            <value>
                <fullName>John Blanchette</fullName>
            </value>
            <value>
                <fullName>Kechelsa Rawlins</fullName>
            </value>
            <value>
                <fullName>Lumi Nemteanu</fullName>
            </value>
            <value>
                <fullName>Marc Dickens</fullName>
            </value>
            <value>
                <fullName>Margaret Seaman</fullName>
            </value>
            <value>
                <fullName>Martin Delgado</fullName>
            </value>
            <value>
                <fullName>Natalie Frappier</fullName>
            </value>
            <value>
                <fullName>Philippe Beltran</fullName>
            </value>
            <value>
                <fullName>Sheree Hairston</fullName>
            </value>
            <value>
                <fullName>Teresa Zubel</fullName>
            </value>
            <value>
                <fullName>Vicki Buss</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>