force-app/main/default/objects/Study_Daily_Report__c/fields/QRACT__c.field-meta.xml
<CustomField>
    <fullName>QRACT__c</fullName>
    <label>QRACT</label>
    <type>Date</type>
</CustomField>