force-app/main/default/objects/Study_Daily_Report__c/fields/RGC_Pharmacogenetics__c.field-meta.xml
<CustomField>
    <fullName>RGC_Pharmacogenetics__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RGC Pharmacogenetics</label>
    <referenceTo>RGC_Pharmacogenetics__c</referenceTo>
    <relationshipLabel>Study Daily Reports</relationshipLabel>
    <relationshipName>Study_Daily_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>