force-app/main/default/objects/Study_Daily_Report__c/fields/Risk_Based_Monitoring__c.field-meta.xml
<CustomField>
    <fullName>Risk_Based_Monitoring__c</fullName>
    <label>Risk Based Monitoring</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>