force-app/main/default/objects/Study_Daily_Report__c/fields/Secondary_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Endpoint__c</fullName>
    <label>Secondary Endpoint</label>
    <type>Date</type>
</CustomField>